# lidar_mmdet3d_thesis

./: .gitignore  basic_inference.py  basic_inference2.py  basic_inference_folder.py  config.py  cyclist_speed.py  cyclist_tracker.py  detector.py  detector_live.py  linefit_config.toml  live_viewer.py  main.py  main_live.py  main_v1.py  model_factory.py  pcd_reader.py  plotspeed.py  print_min_max_nparray.py  printfiles.sh  prova_tmp.py  provaudp.py  realtimetest1.py  rs_lidar_stream.py  rs_to_model_coords.py  show_pcd.py  show_points.py  show_points2.py  step3_infer_one_frame.py  temp.py  test_udp.py  test_udp2.py  test_udp3.py  test_udp4.py  test_udp5.py  test_udp6.py  test_udp_realtime.py  thread_safe_buffer.py  timedpipeline.py  view_pcd.py  write_pcd.py  (+1 more)
bridge/: CMakeLists.txt  rs_bridge.cpp
cpp_sender/: guida.txt  guida_precise.txt  replay_udp.cpp  replay_udp_precise  replay_udp_precise.cpp
docs/: comandi.txt  comandi_rs_driver.txt  comandi_rs_driver_python.txt  rs_driver_python_guide.txt
pcd_tests/test07_1_pcd/: pcd_007.pcd  pcd_033.pcd  pcd_034.pcd  pcd_035.pcd
postprocessing/: utils.py
preprocessing/: crop_pcd.py  pre_process.py
rs_driver_python/: CMakeLists.txt  README.md  pyproject.toml
rs_driver_python/demo/: demo_pcap.py
rs_driver_python/src/: main.cpp
scapy/: RubyPcap500pacchetti.pcap  scapy_sender.py  scapy_sender_realtime.py  temp.py
speed_results/: test15.txt
tcpreplay_locale_nonfunzionante/: cleanup_pcap_env.sh  guida.txt  setup_pcap_env.sh  temptest.py
testlab/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt
versione1/: main_live.py  viewer_live.py
